--- a/client/src/common/scss/theme.scss
+++ b/client/src/common/scss/theme.scss
@@ -12,4 +12,18 @@
   --secondary-contrast-text-light: #000;
   --secondary-contrast-text-main: #fff;
   --secondary-contrast-text-dark: #fff;
+
+  --contrast-red-light: #f381a4;
+  --contrast-red-main: #d53051;
+  --contrast-red-dark: #9a2233;
+  --contrast-red-contrast-text-light: #000;
+  --contrast-red-contrast-text-main: #fff;
+  --contrast-red-contrast-text-dark: #fff;
+
+  --grey-light: #f5f5f5;
+  --grey-main: #9e9e9e;
+  --grey-dark: #616161;
+  --grey-contrast-text-light: #000;
+  --grey-contrast-text-main: #fff;
+  --grey-contrast-text-dark: #fff;
 }
