[DEV-3] fine tuned styles a bit

--- a/client/src/views/checkout/components/scss/OrderCompletion.scss
+++ b/client/src/views/checkout/components/scss/OrderCompletion.scss
@@ -12,16 +12,16 @@
 
 
   &__status {
-    height: 50%;
+    height: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-weight: bold;
-    color: var(--primary-dark);
+    color: var(--primary-main);
 
     &-messages {
-      height: 100%;
+      height: 70%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -38,7 +38,7 @@
   }
 
   &__actions {
-    height: 50%;
+    height: 40%;
     width: 100%;
     display: flex;
     justify-content: space-around;
