--- a/client/src/views/checkout/forms/DeliveryAddressForm.scss
+++ b/client/src/views/checkout/forms/DeliveryAddressForm.scss
@@ -5,6 +5,7 @@
   &__body {
     height: 80%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
