--- a/client/src/common/containers/scss/Footer.scss
+++ b/client/src/common/containers/scss/Footer.scss
@@ -1,9 +1,9 @@
 .footer {
-  background-color: var(--grey-main);
+  background-color: var(--primary-main);
   color: var(--grey-light);
   font-size: 14px;
   text-align: center;
-  padding: 50px;
+  padding: 100px;
 
   &__copyright {
     margin: 0;
