--- a/client/src/common/containers/scss/Header.scss
+++ b/client/src/common/containers/scss/Header.scss
@@ -5,7 +5,7 @@
   padding: 10px;
   height: var(--header-height);
   box-sizing: border-box;
-  background-color: var(--primary-main);
+  background-color: var(--primary-dark);
   color: var(--primary-contrast-text-main);
 
   &__logo {
@@ -30,6 +30,7 @@
 
     &-name {
       font-size: 18px;
+      font-weight: bold;
       margin-right: 20px;
     }
 
@@ -37,8 +38,8 @@
       background-color: transparent;
 
       &-img {
-        width: 30px;
-        height: 30px;
+        width: 35px;
+        height: 35px;
         object-fit: cover;
         border-radius: 50%;
       }
@@ -50,7 +51,7 @@
     margin-right: 10px;
 
     &-icon {
-      margin-right: -10px;
+      margin-right: -15px;
       color: var(--secondary-contrast-text-dark);
     }
   }
