--- a/client/src/common/scss/theme.scss
+++ b/client/src/common/scss/theme.scss
@@ -1,25 +1,26 @@
 :root {
-  --primary-light: #8ed1fc;
-  --primary-main: #2d9cdb;
-  --primary-dark: #0d6db3;
+  --primary-light: #6c7989;
+  --primary-main: #3a475a;
+  --primary-dark: #14181e;
   --primary-contrast-text-light: #000;
   --primary-contrast-text-main: #fff;
   --primary-contrast-text-dark: #fff;
 
-  --secondary-light: #80e8dd;
-  --secondary-main: #00c1b5;
-  --secondary-dark: #009388;
+  --secondary-light: #a6c8ff;
+  --secondary-main: #4c9aff;
+  --secondary-dark: #0e6adb;
   --secondary-contrast-text-light: #000;
   --secondary-contrast-text-main: #fff;
   --secondary-contrast-text-dark: #fff;
 
-  --contrast-red-light: #f381a4;
-  --contrast-red-main: #d53051;
-  --contrast-red-dark: #9a2233;
-  --contrast-red-contrast-text-light: #000;
-  --contrast-red-contrast-text-main: #fff;
-  --contrast-red-contrast-text-dark: #fff;
+  --contrast-light: #ffaca6;
+  --contrast-main: #ff5d54;
+  --contrast-dark: #c72e25;
+  --contrast-contrast-text-light: #000;
+  --contrast-contrast-text-main: #fff;
+  --contrast-contrast-text-dark: #fff;
 
+  --grey-lightest: #fcfcfc;
   --grey-light: #f5f5f5;
   --grey-main: #9e9e9e;
   --grey-dark: #616161;
