--- a/client/src/views/shop/components/scss/Product.scss
+++ b/client/src/views/shop/components/scss/Product.scss
@@ -1,4 +1,3 @@
-
 .product {
   display: flex;
   justify-content: space-between;
@@ -7,6 +6,8 @@
   box-sizing: border-box;
   border-radius: 10px;
   border: 1px solid var(--grey-light);
+  background-color: white;
+  box-shadow: 0 0 5px var(--grey-light);
 
   &:hover {
     background-color: var(--grey-light);
@@ -26,6 +27,7 @@
       margin-right: 10px;
       border-radius: 10px;
       overflow: hidden;
+      box-shadow: 2px 2px 10px var(--primary-light);
     }
 
     &-details {
