--- a/client/src/views/shop/components/scss/Product.scss
+++ b/client/src/views/shop/components/scss/Product.scss
@@ -77,9 +77,16 @@
   }
 
   &__actions {
-    flex: 1;
+    flex: 2;
     display: flex;
     align-items: center;
+
+    &-stock-limit {
+      margin-right: 10px;
+      flex: 1;
+      color: var(--contrast-dark);
+      font-weight: bold;
+    }
 
     &-quantity {
       margin-right: 10px;
